--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Formulario con reCAPTCHA</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 </head>
 <body class="bg-light py-5">
   <div class="container">
@@ -21,6 +22,10 @@
               <div class="mb-3">
                 <label for="email" class="form-label">Correo electrónico</label>
                 <input type="email" class="form-control" id="email" required>
+              </div>
+              <div class="mb-3">
+                <label for="name" class="form-label">Asunto</label>
+                <input type="text" class="form-control" id="title" required>
               </div>
               <div class="mb-3">
                 <label for="message" class="form-label">Mensaje</label>
@@ -54,9 +59,10 @@
       const name = document.getElementById('name').value.trim();
       const email = document.getElementById('email').value.trim();
       const message = document.getElementById('message').value.trim();
+      const title = document.getElementById('title').value.trim();
       const recaptchaResponse = grecaptcha.getResponse();
 
-      if (!name || !email || !message) {
+      if (!name || !email || !title) {
         msg.innerHTML = '<div class="alert alert-danger">Por favor completa todos los campos.</div>';
         return;
       }
@@ -72,10 +78,28 @@
         return;
       }
 
-      // Simulación de envío exitoso
-      msg.innerHTML = '<div class="alert alert-success">¡Mensaje enviado exitosamente!</div>';
-      form.reset();
+      (function(){
+            emailjs.init("gAqXFEni2RO8D15Do"); // Tu clave pública de EmailJS
+        })();
+      /*if (!recaptchaResponse) {
+        msg.innerHTML = '<div class="alert alert-warning">Por favor verifica que no eres un robot.</div>';
+        return;
+      }*/
+
+    emailjs.send("service_8v1xq4g", "template_o9cet14", {
+    name: name,
+    email: email,
+    title: title
+    }).then(function(response) {
+      console.log("Correo enviado con éxito", response.status, response.text);
+      alert("nos contacteromos por mail");
+       form.reset();
       grecaptcha.reset(); // resetea el captcha
+    }, function(error) {
+    console.error("Error al enviar", error);
+      alert("error al enviar respuesta");
+    });
+     
     });
   </script>
 
