--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     title: title
     }).then(function(response) {
       console.log("Correo enviado con éxito", response.status, response.text);
-      alert("nos contacteromos por mail");
+      alert("nos contactaremos por mail");
        form.reset();
       grecaptcha.reset(); // resetea el captcha
     }, function(error) {
