--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
             <form id="contactForm" novalidate>
               <div class="mb-3">
                 <label for="name" class="form-label">Nombre</label>
-                <input type="text" class="form-control" id="name" required>
+                <input type="text" class="form-control" id="name" name="name" required>
               </div>
               <div class="mb-3">
                 <label for="email" class="form-label">Correo electrónico</label>
-                <input type="email" class="form-control" id="email" required>
+                <input type="email" class="form-control" id="email" name="email" required>
               </div>
               <div class="mb-3">
                 <label for="name" class="form-label">Asunto</label>
-                <input type="text" class="form-control" id="title" required>
+                <input type="text" class="form-control" id="title" name="asunto" required>
               </div>
               <div class="mb-3">
                 <label for="message" class="form-label">Mensaje</label>
-                <textarea class="form-control" id="message" rows="5" required></textarea>
+                <textarea class="form-control" id="message" rows="5" name="message" required></textarea>
               </div>
 
               <!-- reCAPTCHA -->
