--- a/index.html
+++ b/index.html
@@ -103,8 +103,7 @@
     }).then(function(response) {
       console.log("Correo enviado con éxito", response.status, response.text);
       alert("nos contactaremos por mail");
-       form.reset();
-      grecaptcha.reset(); // resetea el captcha
+      window.location.href="https://pellittaroman.github.io/PaginaWeb.github.io/login.html"
     }, function(error) {
     console.error("Error al enviar", error);
       alert("error al enviar respuesta");
@@ -116,3 +115,4 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
